--- a/src/TagScanner/AndroidManifest.xml
+++ b/src/TagScanner/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <uses-feature
         android:name="android.hardware.nfc"
-        android:required="true" />
+        android:required="false" />
 
     <application
         android:icon="@drawable/ic_launcher"
