--- a/src/TagScanner/AndroidManifest.xml
+++ b/src/TagScanner/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="15" />
 
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -35,6 +35,8 @@
         </activity>
 
         <service android:name=".ArduinoConnectService" />
+        
+        <provider android:name=".ContactIdProvider" android:authorities="info.staticfree.android.rfiddoor" android:exported="false"/>
 
         <!--
      Copyright (C) 2009 The Android Open Source Project
