--- a/src/TagScanner/AndroidManifest.xml
+++ b/src/TagScanner/AndroidManifest.xml
@@ -4,14 +4,23 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="17" />
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <permission
+        android:name="info.staticfree.android.taguid.DOOR_OPEN"
+        android:description="@string/permission_door_open_description"
+        android:label="@string/open_the_door"
+        android:protectionLevel="dangerous" />
     
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="info.staticfree.android.taguid.DOOR_OPEN" />
 
     <uses-feature
         android:name="android.hardware.nfc"
@@ -36,9 +45,40 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".ArduinoConnectService" />
+        <service
+            android:name=".ArduinoConnectService"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="info.staticfree.android.taguid.ACTION_OPEN_DOOR" />
+            </intent-filter>
+        </service>
+
+        <receiver
+            android:name=".OpenReceiver"
+            android:permission="info.staticfree.android.taguid.DOOR_OPEN" >
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <action android:name="info.staticfree.android.taguid.ACTION_OPEN_DOOR" />
+            </intent-filter>
+        </receiver>
         
-        <provider android:name=".ContactIdProvider" android:authorities="info.staticfree.android.rfiddoor" android:exported="false"/>
+        <receiver
+            android:name=".DoorOpenWidget"
+            android:label="@string/open_the_door" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget" />
+        </receiver>
+
+        <provider
+            android:name=".ContactIdProvider"
+            android:authorities="info.staticfree.android.rfiddoor"
+            android:exported="false" />
 
         <!--
      Copyright (C) 2009 The Android Open Source Project
